--- a/style.css
+++ b/style.css
@@ -38,10 +38,11 @@ body {
 .single-result {
 	background: rgba(255, 255, 255, 0.2);
 	border-radius: 15px;
+	word-break: break-word;
 }
 .single-result > div:nth-child(2) {
-	flex-basis: 50%;
-	padding: 0 10px;
+	flex: 1;
+	padding: 0 15px;
 }
 .single-result a {
 	color: inherit;
@@ -49,4 +50,36 @@ body {
 
 .btn.go-back {
 	color: #fff;
+}
+
+@media (max-width: 575px) {
+	.single-result {
+		display: grid !important;
+		grid-template-columns: auto 2fr;
+		text-align: left;
+		grid-gap: 10px;
+	}
+	.single-result div:nth-child(3) {
+		grid-column: 1 / span 2;
+	}
+	.single-result div:nth-child(3) .btn {
+		width: 100%;
+		font-size: 0.8rem;
+		padding: 5px 10px;
+	}
+	.single-result > div:nth-child(2) {
+		padding: 0;
+	}
+	.single-result h3 {
+		font-size: 1.1rem;
+		margin-bottom: 0.3rem;
+	}
+	.single-result .lead {
+		font-size: 0.9rem;
+		line-height: 1.3;
+		margin-bottom: 0;
+	}
+	.single-result img {
+		max-width: 70px;
+	}
 }
